# sphinx-emf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .prospector_full.yaml  .readthedocs.yml  AUTHORS  CNAME  Makefile  README.rst  changelog.html  configuration.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  pylint.toml  pyproject.toml  searchindex.js  sitemap.xml  support.html  usage.html
.github/workflows/: ci.yaml  docs.yml  release.yaml
_downloads/9db1e550cd895f299044fbe58c1febdb/: noxfile.py
_sources/: changelog.rst.txt  configuration.rst.txt  installation.rst.txt
_static/: custom.css  google_fonts.css
docs/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  intro.rst  support.rst  usage.rst
docs/_static/: custom.css
sphinx_emf/: __init__.py  builder.py  cli.py  logger.py  main.py  setup.py  utils.py
sphinx_emf/base_templates/: content.rst.j2  content_direct.rst.j2  content_direct_field.rst.j2  content_direct_fields.rst.j2  content_fields.rst.j2  content_nested.rst.j2  content_nested_need.rst.j2  content_nested_needs.rst.j2  extra_option.rst.j2  extra_options.rst.j2  link_option.rst.j2  macros.j2  need.rst.j2  needs.rst.j2  options.rst.j2  options_field.rst.j2  options_fields.rst.j2  options_link.rst.j2  options_links.rst.j2
sphinx_emf/config/: invert.py  model.py  validate.py
sphinx_emf/ecore/: __init__.py  ecore_io.py  io_ecore.py
sphinx_emf/user_hooks/: escape_rst.py
tests/: __init__.py  test_basic.py
tests/data/: __init__.py
tests/data/base/: __init__.py  base_test.xmi
