[tool.poetry]
name = "sphinx-emf"

# Don't miss updates docs/conf.py and docs/changelog.rst when updating
version = "0.1.0"

description = "Connect Sphinx-Needs to EMF models."
authors = ["team useblocks <info@useblocks.com>"]
license = "MIT"
readme = "README.rst"
repository = "http://github.com/useblocks/sphinx-emf"
documentation = "https://sphinx-emf.readthedocs.io/"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

packages = [{ include = "sphinx_emf" }]


[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
click = "^8.1.3"
Jinja2 = "^3.1.2"
pydantic = "^1.8.2"
pyecore = "^0.13"
Sphinx = ">=4.0"
sphinx-needs = "^1.0.2"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2"

# test
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pytest = "^7"
pytest-xdist = "*"    # parallelisation

# mypy
docutils-stubs = "^0.0.22"
mypy = "^0.960"
types-setuptools = "^57.4.14"

# formatting
black = "^22.3"
isort = "^5.7.0"

# linting
bandit = "^1.7.4"
prospector = "1.7.7"
pylint = "^2.15.3"
pyroma = "^4.0"
vulture = "^2.6"

[tool.poetry.group.docs.dependencies]
esbonio = { version = "^0.14.1", optional = true }
sphinx-immaterial = "^0.10.0"
sphinx_design = "^0.3.0"
sphinxcontrib-programoutput = "^0.17"
autodoc-pydantic = "^1.8.0"

[tool.poetry.extras]
docs = ["esbonio", "sphinx-rtd-theme"]

[tool.poetry.scripts]
sphinx-emf-cli = "sphinx_emf.cli:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.vulture]
# currently ignored by prospector, see https://github.com/PyCQA/prospector/issues/505
paths = ["coon_and_friends", "docs", "tests"]
exclude = ["docs/conf.py"]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
force_sort_within_sections = true
sort_relative_in_force_sorted_sections = true
lines_after_imports = 2

[tool.bandit]

[tool.mypy]
strict = false
show_error_codes = true
implicit_reexport = true
files = "sphinx_emf"
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
# any module that should be ignored by mypy
module = []
ignore_errors = true

[build-system]
requires = [
    "setuptools",
    "poetry_core>=1.0.8",
] # setuptools for deps like plantuml
build-backend = "poetry.core.masonry.api"
